Added record CRUD APIs with filtering, integrated RBAC, and refined JWT security flow